--- a/installation.ipynb
+++ b/installation.ipynb
@@ -27,6 +27,7 @@
     "Donload .requirements.txt file from this [repo](https://github.com/CASIA-IVA-Lab/FastSAM.git) and save it in the same folder as the notebook.\n",
     "```bash\n",
     "pip install -r .requirements.txt\n",
+    "conda install pytorch torchvision torchaudio pytorch-cuda=11.7 -c pytorch -c nvidia\n",
     "```"
    ]
   },
